# WatzMusicAPI-V1

./: main.py  pyproject.toml
templates/: docs.html.j2
