[tool.poetry]
name = "repl_python3_WatzMusicAPI-1"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
apiclient = "^1.0.4"
Flask = "^2.0.2"
oauth2client = "^4.1.3"
youtube-search-python = "^1.4.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
